# MessageSocket

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  ressource.qrc  socket.cpp  socket.h  watcher.cpp  watcher.h
